<resources>
    <string name="app_name">DeveloperCv</string>
    <string name="action_settings">Settings</string>


    <string name="DefautName">Martin Boje Carpentier</string>
    <string name="DefaultId">14231</string>
    <string name="DefaultAndroid">true</string>
    <string name="SaveButton">Save</string>
    <string name="CancelButton">Cancel</string>

    <string name="NameLabel">Name</string>
    <string name="IdLabel">Id</string>
    <string name="AndroidLabel">Android</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="NameKey" translatable="false">Name</string>
    <string name="IdKey" translatable="false">Id</string>
    <string name="androidKey" translatable="false">Android</string>

    <string name="name_hint">Write your name here</string>
    <string name="write_your_id_here">Write your id here</string>
    <string name="edit_resource">Edit informations</string>
</resources>
